corrected edits and complete work

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,8 +19,9 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
+      "@app/*": ["./app/*"],
       "@components/*": ["./src/components/*"],
-      "@redux/*": ["./src/redux/*"],
+      "@redux/*": ["./src/redux/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
