--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '22'  # Укажи нужную версию
+        node-version: '22'  
 
     - name: Install dependencies
       run: npm install
@@ -55,17 +55,12 @@ jobs:
     - name: Build Frontend
       run: npm run build
       working-directory: frontend  # Укажи путь к папке фронтенда
-
-    - name: Deploy Frontend
-      run: npm run deploy
-      run: git config --global user.email "saetonskie@mail.ru"
-      run: git config --global user.name "saetovdinar"
-      working-directory: frontend
+    
 
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.ACTION_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN}}
         publish_dir: frontend/out  
 
