--- a/app-path-routes-manifest.json
+++ b/app-path-routes-manifest.json
@@ -1,1 +1,1 @@
-{"/_not-found/page":"/_not-found","/404/page":"/404","/basket/page":"/basket","/contacts/page":"/contacts","/goodscatalogue/page":"/goodscatalogue","/info/page":"/info","/page":"/","/products/page":"/products","/success/page":"/success"}
+{"/_not-found/page":"/_not-found","/basket/page":"/basket","/404/page":"/404","/contacts/page":"/contacts","/goodscatalogue/page":"/goodscatalogue","/info/page":"/info","/page":"/","/products/page":"/products","/success/page":"/success"}
